--- a/Home page/index.html
+++ b/Home page/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-  <!-- *********************** top 3 Images *************** -->
+  <!-- ********************** top 3 Images *************** -->
   <div class="row">
     <div class="col s12 l5" style="padding:0px!important">
       <div class="hover12 ">
